Fixed issue where shortcut icons for email, github and linkedin weren't being displayed on mobile devices or windowed browser windows

--- a/css/index.css
+++ b/css/index.css
@@ -356,7 +356,7 @@ body{
     opacity: 1;
     letter-spacing: 10px;
 }
-.contact{
+.contact {
     display: flex;
     position: absolute;
     width: 10%;
@@ -1343,8 +1343,14 @@ For devices with smaller width like mobile phone
         letter-spacing: 2px;
         font-size: 40px;
     }
-    .contact{
-        display: none;
+    .contact {
+        display: flex;
+        position: fixed;
+        top: 10px;
+        right: 10px;
+        z-index: 1000;
+        padding: 5px;
+        border-radius: 20px;
     }
     .header-image{
         float: right;
@@ -1819,10 +1825,7 @@ for tabs and large phones
     .header-content-box{
         padding-left: 0px;
     }
-    .contact{
-        display: none;
-    }
-    #breaker{
+    #breaker {
         height: 100vh;
         width: 100vw;
         background-color: #481380;
